Debut de ChatBot Fonctionnel

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST="gateway01.eu-central-1.prod.aws.tidbcloud.com"
-DB_PORT="4000"
-DB_USER="32ic3eZ7KmMjKR5.root"
-DB_PASSWORD="ZQaO16Alq2osBFfj"
-DB_NAME="nutrifit"
+DB_HOST=gateway01.eu-central-1.prod.aws.tidbcloud.com
+DB_PORT=4000
+DB_USER=32ic3eZ7KmMjKR5.root
+DB_PASSWORD=KOVezM08rY0WHGZS
+DB_NAME=nutrifit
